--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "express": "^4.16.4",
     "helmet": "^3.14.0",
     "joi": "^14.0.1",
-    "mongoose": "^5.3.7"
+    "mongoose": "^5.3.7",
+    "pug": "^2.0.3"
   },
   "devDependencies": {
     "faker": "^4.1.0"
